[gd_scene load_steps=3 format=3 uid="uid://dxlpfk035hknr"]

[ext_resource type="Script" path="res://addons/timeline_control/timeline_control_test.gd" id="1_egc07"]
[ext_resource type="PackedScene" uid="uid://cwilpnax30ixm" path="res://addons/timeline_control/timeline_control.tscn" id="1_eolm8"]

[node name="TimelineControlTest" type="Node2D"]
script = ExtResource("1_egc07")

[node name="TimelineControl" parent="." instance=ExtResource("1_eolm8")]
offset_right = 647.0
offset_bottom = 407.0

[node name="Button" type="Button" parent="."]
offset_left = 1080.0
offset_top = 205.0
offset_right = 1332.0
offset_bottom = 259.0
text = "Add row"

[node name="Button3" type="Button" parent="."]
auto_translate_mode = 1
offset_left = 1365.0
offset_top = 199.0
offset_right = 1617.0
offset_bottom = 253.0
text = "Add row With Control"

[node name="Button2" type="Button" parent="."]
auto_translate_mode = 1
offset_left = 1089.0
offset_top = 282.0
offset_right = 1341.0
offset_bottom = 336.0
text = "Duplicate"

[connection signal="add_row_pressed" from="TimelineControl" to="." method="_timeline_control_add_row_pressed"]
[connection signal="row_pressed" from="TimelineControl" to="." method="_row_pressed"]
[connection signal="pressed" from="Button" to="." method="_add_row_pressed"]
[connection signal="pressed" from="Button3" to="." method="_add_row_with_control_pressed"]
[connection signal="pressed" from="Button2" to="." method="_duplicate_pressed"]
